<resources>
    <string name="app_name">Gamegenix</string>
    <string name="title_home">Home</string>
    <string name="title_genres">Genres</string>

    <!-- Common -->
    <string name="cancel">Cancel</string>

    <!-- Home Fragment -->
    <string name="search_game_text">Search Game..</string>


    <!-- Sorting -->
    <string name="by_default">Default</string>
    <string name="by_released">Released Date</string>
    <string name="by_rating">Rating</string>
    <string name="by_popularity">Popularity</string>
    <string name="by_updated">Updated Date</string>

    <!-- Detail -->
    <string name="updated_date">Updated: %1$s</string>
    <string name="released_date">Released: %1$s</string>

    <string name="meta_score">Meta Score:</string>
    <string name="publisher_text">Publisher: %1$s</string>

    <string name="platforms">Platforms</string>
    <string name="game_id_bundle_name" translatable="false">game_id</string>
    <string name="stores">Stores</string>
    <string name="game_rating" translatable="false">%1$s/5</string>
    <string name="meta_score_value" translatable="false">%1$s/100</string>

    <!--Splash-->
    <string name="splash_transition_name" translatable="false">splash_transition</string>
</resources>