<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mrtckr.gamegenix.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_navigation_home_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_genres"
        android:name="com.mrtckr.gamegenix.ui.genres.GenresFragment"
        android:label="@string/title_genres"
        tools:layout="@layout/fragment_genres">
        <action
            android:id="@+id/action_navigation_genre_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.mrtckr.gamegenix.ui.search.SearchFragment"
        android:label="SearchFragment">
    <action
        android:id="@+id/action_navigation_search_to_detailFragment"
        app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.mrtckr.gamegenix.ui.detail.DetailFragment"
        android:label="DetailFragment">
        <argument
            android:name="@string/game_id_bundle_name"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>

</navigation>