<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/mainCoordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:background="@color/white">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/gameDetailToolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/toolbarText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_black"
                        android:text="@string/app_name"
                        android:textColor="@color/palette5"
                        android:textSize="@dimen/_18sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.52"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/toolbarImage"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_4sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:scaleType="fitCenter"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1"
                        app:layout_constraintEnd_toStartOf="@+id/toolbarText"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/gamegenix_icon" />

                    <ImageView
                        android:id="@+id/toolbarBackButton"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:scaleType="fitCenter"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/back_button"
                        app:tint="@color/palette5" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/mainNestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/_50sdp">

                <ImageView
                    android:id="@+id/gameImage"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_250sdp"
                    android:scaleType="fitCenter"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/placeholder" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/ratingCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    app:cardBackgroundColor="@color/palette5_alpha"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/gameImage">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/ratingScoreText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_10sdp"
                            android:text="@string/game_rating"
                            android:textColor="@color/palette1"
                            android:textSize="@dimen/_12sdp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/gameName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:fontFamily="@font/lato_black"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/palette1"
                    android:textSize="@dimen/_16sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gameImage" />

                <TextView
                    android:id="@+id/gamePlatformsTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/lato_black"
                    android:gravity="center"
                    android:text="@string/platforms"
                    android:textColor="@color/palette2"
                    android:textSize="@dimen/_13sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/publisherText" />

                <TextView
                    android:id="@+id/gameStoresText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:fontFamily="@font/lato_black"
                    android:gravity="center"
                    android:text="@string/stores"
                    android:textColor="@color/palette2"
                    android:textSize="@dimen/_13sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gamePlatformsRecyclerView" />

                <TextView
                    android:id="@+id/gameDescriptionText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gameName" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/metaScoreCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gameDescriptionText">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/metaScoreTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/_8sdp"
                            android:paddingTop="@dimen/_4sdp"
                            android:paddingEnd="@dimen/_8sdp"
                            android:text="@string/meta_score"
                            android:textColor="@color/palette5"
                            android:textSize="@dimen/_12sdp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/metaScoreValueText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="97/100"
                            android:textColor="@color/palette1"
                            android:textSize="@dimen/_12sdp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/metaScoreTitle"
                            app:layout_constraintVertical_bias="0.35000002" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/gameReleasedText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center_vertical"
                    android:text="@string/released_date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="@+id/metaScoreCardView"
                    app:layout_constraintEnd_toStartOf="@+id/metaScoreCardView"
                    app:layout_constraintStart_toStartOf="@+id/gameDescriptionText"
                    app:layout_constraintTop_toTopOf="@+id/metaScoreCardView"
                    app:layout_constraintVertical_bias="0.19999999" />

                <TextView
                    android:id="@+id/gameUpdatedText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center_vertical"
                    android:text="@string/updated_date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="@+id/metaScoreCardView"
                    app:layout_constraintEnd_toEndOf="@+id/gameReleasedText"
                    app:layout_constraintStart_toStartOf="@+id/gameDescriptionText"
                    app:layout_constraintTop_toTopOf="@+id/metaScoreCardView"
                    app:layout_constraintVertical_bias="0.81" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/gameStoresRecyclerView"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:layout_constraintEnd_toEndOf="@+id/gamePlatformsTitle"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/gamePlatformsTitle"
                    app:layout_constraintTop_toBottomOf="@+id/gameStoresText" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/gamePlatformsRecyclerView"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:layout_constraintEnd_toEndOf="@+id/gamePlatformsTitle"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/gamePlatformsTitle"
                    app:layout_constraintTop_toBottomOf="@+id/gamePlatformsTitle" />

                <TextView
                    android:id="@+id/publisherText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/publisher_text"
                    android:textColor="@color/palette1"
                    android:textSize="@dimen/_13sdp"
                    app:layout_constraintEnd_toEndOf="@+id/metaScoreCardView"
                    app:layout_constraintStart_toStartOf="@+id/gameUpdatedText"
                    app:layout_constraintTop_toBottomOf="@+id/metaScoreCardView" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>